# hvmcc

./: Cargo.toml  README.md  TODO.md  rustfmt.toml
hvmcc/: Cargo.toml
hvmcc-prototype/: package-lock.json  package.json  parser.peg  run.sh
hvmcc-prototype/src/: index.ts  parser.ts
imp_hvm/: Cargo.toml
imp_hvm/src/: fun.rs  imp.rs  lib.rs  parser.lalrpop  to_hvm.rs
imp_hvm/src/eval/: fun.rs  imp.rs  mod.rs
imp_hvm/src/fun/: eval.rs  expr.rs  fun_parser.lalrpop  mod.rs  print.rs  syntax.rs  to_hvm.rs
imp_hvm/src/imp/: mod.rs  print.rs  syntax.rs  to_fun.rs
imp_hvm/src/imp/braun/: converter.rs  mod.rs
imp_hvm/src/imp/to_fun/: mod.rs  ssa_to_fun.rs
imp_hvm/src/imp/to_fun/ssa/: braun.rs  mod.rs  structs.rs  to_ssa.rs
imp_hvm/tests/: mod.rs
imp_hvm/tests/fun_eval/: arith.golden  arith.hvmcc  fib.hvmcc  match.golden  match.hvmcc  scope.golden  scope.hvmcc  scope_leak.golden  scope_leak.hvmcc
imp_hvm/tests/fun_to_hvm/: big_rules.golden  big_rules.hvmcc  id.golden  id.hvmcc  invalid_name.golden  invalid_name.hvmcc  matchexpr.golden  matchexpr.hvmcc  nums.golden  nums.hvmcc  unit.golden  unit.hvmcc
imp_hvm/tests/imp_ssa/: assignment.golden  assignment.hvmcc  if.golden  if.hvmcc  undef.hvmcc
js_imp/: Cargo.toml
js_imp/src/: compile.rs  lib.rs  main.rs
js_imp/test/: old_syntax.js  proposed_syntax.js  test.js
py_imp/: Cargo.toml
pyhvm/: Cargo.toml  README.md  dev.sh  pyproject.toml
pyhvm/python/pyhvm/: __init__.py  decorator.py
pyhvm/src/: compile.rs  compiler.rs  lib.rs
pyhvm/test/: test.py
